Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38983

QBluetoothTransferReply requires error signal

XMLWordPrintable

      The finished() signal is sometimes emitted in case of an error and sometimes it is not. This behavior is inconsistent. The class should have an error signal which is emitted and according to the documentation finished() should be emitted under consistent conditions.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ablasche Alex Blasche
            ablasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes