Add missing error() signal to QBluetoothTransferReply

The signal makes error handling much more conveniant. One error situation
on QNX did not emit the required finished()/errorType() signals when
required.

A few minor typo fixes.

Task-number: QTBUG-38983
Change-Id: I89c3fbee43921c8894a0ab200ee5550e7dc44543
Reviewed-by: Lars Knoll <lars.knoll@digia.com>